--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
 <div id="splash">
     <div class="logo-box">UP</div>
-    <h2 style="margin-top: 20px; font-weight: 800; color: var(--p); letter-spacing: 2px;">URBAN PAINTPRO</h2>
+    <h2 style="margin-top: 20px; font-weight: 800; color: var(--p); letter-spacing: 2px;">URBAN PAINTPRE</h2>
 </div>
 
 <div class="header">
@@ -122,7 +122,7 @@
 </div>
 
 <div id="orders" class="page">
-    <h2 style="font-weight: 800; margin-bottom: 20px;">My Order</h2>
+    <h2 style="font-weight: 800; margin-bottom: 20px;">My Projects</h2>
     <div id="order-list"></div>
 </div>
 
@@ -310,3 +310,4 @@
 </script>
 </body>
 </html>
+
