--- a/index.html
+++ b/index.html
@@ -96,9 +96,9 @@
         <div style="display:grid; grid-template-columns:1fr 1fr; gap:10px;">
             <input type="number" id="sqft" class="inp" style="background:rgba(255,255,255,0.1); color:white; border:none;" placeholder="Area (Sqft)" oninput="calc()">
             <select id="work-type" class="inp" style="background:rgba(255,255,255,0.1); color:white; border:none;" onchange="calc()">
-                <option value="1" style="color:black">Repaint</option>
-                <option value="1.5" style="color:black">Repaint + Primer</option>
-                <option value="2.2" style="color:black">Fresh Paint</option>
+                <option value="" style="color:black">Repaint</option>
+                <option value="" style="color:black">Repaint + Primer</option>
+                <option value="" style="color:black">Fresh Paint</option>
             </select>
         </div>
 
