--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                 <div style="display: grid; grid-template-columns: 2fr 1fr; gap: 15px; align-items: center;">
                     <select id="scope-sel" class="inp" style="margin-bottom:0;" onchange="calc()">
                         <option value="1">Full Home Painting</option>
-                        <option value="0.3">Partial (1-2 Rooms)</option>
+                        <option value="0.3">Partial (1 Rooms)</option>
                         <option value="0.1">Single Wall Accent</option>
                     </select>
                     <div style="display:flex; align-items:center; justify-content:center; gap:10px; background:white; padding:8px; border-radius:12px; border:1px solid #E2E8F0;">
