--- a/partner.html
+++ b/partner.html
@@ -65,7 +65,7 @@
       apiKey: "AIzaSyA2DT2ITLS2LgZF3yEkDA_K9kbPIsfpDig",
       authDomain: "professionalpainters-28488.firebaseapp.com",
       projectId: "professionalpainters-28488",
-      databaseURL: "https://professionalpainters-28488-default-rtdb.firebaseio.com",
+      databaseURL: "https://professionalpainters-28488-default-rtdb.asia-southeast1.firebasedatabase.app/",
       storageBucket: "professionalpainters-28488.firebasestorage.app",
       messagingSenderId: "233510965012",
       appId: "1:233510965012:web:ccc02da0f3e86a3b4a7c01"
