--- a/index.html
+++ b/index.html
@@ -383,16 +383,17 @@
     localStorage.setItem("city", currentCity);
     calc(); // existing calc() reuse
     }
-const firebaseConfig = {
+
+        const firebaseConfig = {
   apiKey: "AIzaSyCmqBL6a0muExq2qBsSR6M3C_8AyXcJ2k8",
-  authDomain: "urban-paint-pro.firebaseapp.com",
+  authDomain: "urban-paint-pro.firebaseapp.com", // <--- YAHI SABSE ZAROORI HAI (Isse change mat karna)
   databaseURL: "https://urban-paint-pro-default-rtdb.asia-southeast1.firebasedatabase.app",
   projectId: "urban-paint-pro",
   storageBucket: "urban-paint-pro.firebasestorage.app",
   messagingSenderId: "929763117480",
-  appId: "1:929763117480:web:560057baeb12672078b59d",
-  measurementId: "G-GZPV12GLPP"
+  appId: "1:929763117480:web:560057baeb12672078b59d"
 };
+        
         
 
 
