--- a/index.html
+++ b/index.html
@@ -897,10 +897,12 @@ function loadRealData(userEmail) {
         function saveNewAddress() { const v=document.getElementById('new-address-input').value; if(v) db.ref('users/'+auth.currentUser.uid+'/addresses').push(v); }
         function deleteAddress(k) { if(confirm("Delete?")) db.ref('users/'+auth.currentUser.uid+'/addresses/'+k).remove(); }
         function updateProfile() { const n = document.getElementById('edit-name').value; if(n && auth.currentUser) { auth.currentUser.updateProfile({displayName: n}); alert("Updated!"); closeFS('fs-personal'); } }
-  
-setTimeout(() => {
-    document.getElementById("splash")?.remove();
-}, 3000); 
-        </script>
-</body>
+        
+        // Splash screen remover
+        setTimeout(() => {
+            document.getElementById("splash")?.remove();
+        }, 3000);
+
+    </script> </body>
 </html>
+
