--- a/index.html
+++ b/index.html
@@ -231,6 +231,7 @@
                         <option value="1">Full Home Painting</option>
                         <option value="0.3">Partial (1Room)</option>
                         <option value="0.1">Single Wall </option>
+                    </select>
                     <div style="display:flex; align-items:center; justify-content:center; gap:10px; background:white; padding:8px; border-radius:12px; border:1px solid #E2E8F0;">
                         <button onclick="updateQty(-1)" style="border:none; background:none; color:var(--p); font-weight:800; cursor:pointer;">-</button>
                         <b id="qty-val" style="min-width:20px; text-align:center;">1</b>
@@ -713,7 +714,7 @@ function loadRealData(userEmail) {
                     container.innerHTML = html;
                 } else container.innerHTML = "<small>No addresses.</small>";
             });
-        }
+        });
 
         // --- NEW UPI PAYMENT SYSTEM ---
         
@@ -897,11 +898,6 @@ function loadRealData(userEmail) {
         function saveNewAddress() { const v=document.getElementById('new-address-input').value; if(v) db.ref('users/'+auth.currentUser.uid+'/addresses').push(v); }
         function deleteAddress(k) { if(confirm("Delete?")) db.ref('users/'+auth.currentUser.uid+'/addresses/'+k).remove(); }
         function updateProfile() { const n = document.getElementById('edit-name').value; if(n && auth.currentUser) { auth.currentUser.updateProfile({displayName: n}); alert("Updated!"); closeFS('fs-personal'); } }
-        
-        // Splash screen remover
-        setTimeout(() => {
-            document.getElementById("splash")?.remove();
-        }, 3000);
 
     </script> </body>
 </html>
