--- a/partner.html
+++ b/partner.html
@@ -67,7 +67,7 @@
     apiKey: "AIzaSyCmqBL6a0muExq2qBsSR6M3C_8AyXcJ2k8",
     authDomain: "urban-paint-pro.firebaseapp.com",
     // Notice: 'asia-southeast1' likha hai, jo Singapore ka code hai
-    databaseURL: "https://urban-paint-pro-default-rtdb.asia-southeast1.firebasedatabase.app",
+    databaseURL: "https://urban-paint-pro-default-rtdb.asia-southeast1.firebasedatabase.app/",
     projectId: "urban-paint-pro",
     storageBucket: "urban-paint-pro.firebasestorage.app",
     messagingSenderId: "929763117480",
